pkg/ibmvpc/examples/out/explain_out/NACLOnlyDenyNoConnQuery_all_vpcs_explain_detail.txt
Explaining connectivity from vsi1-ky to vsi2-ky within test-vpc1-ky using "protocol: ICMP"
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: vsi2-ky[10.240.20.4]
==========================================================================================

No connections from vsi1-ky[10.240.10.4] to vsi2-ky[10.240.20.4] using "protocol: ICMP";
connection is blocked by egress

Egress: security group sg1-ky allows connection; network ACL acl1-ky blocks connection
Ingress: network ACL acl2-ky allows connection; security group sg1-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> | network ACL acl1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky blocks connection with the following deny rules:
			index: 0, direction: outbound , src: 10.240.10.0/24 , dst: 10.240.20.0/24, conn: all, action: deny

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 6, direction: inbound , src: 10.240.10.0/24 , dst: 10.240.20.0/24, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
